# demo_qwenvl_backend

./: .gitignore  Dockerfile  demo_qwenvl_backend.py  main.py  pyproject.toml  server.py
