[project]
name = "demo_qwenvl_backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "fastapi>=0.120.1",
    "opentelemetry-distro>=0.59b0",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-instrumentation-fastapi>=0.59b0",
    "python-multipart>=0.0.20",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "watchfiles>=1.1.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.7",
    "pytest>=8.4.2",
]
